--- a/src/sidebar/sidebarOption.css
+++ b/src/sidebar/sidebarOption.css
@@ -4,6 +4,17 @@
     cursor: pointer;
 }
 
+.sidebarOption:hover {
+    background-color: #e8f5fe;
+    border-radius: 30px;
+    color: var(--twitter-color);
+    transition: color 100ms ease-out;
+}
+
+.sidebarOption-active {
+    color: var(--twitter-color)
+}
+
 .sidebarOption > .MuiSvgIcon-root {
     padding: 20px
 }
@@ -12,4 +23,15 @@
     font-weight: 800;
     font-size: 20px;
     margin-right: 20px;
+}
+
+.sidebarOption-tweet {
+    background-color: var(--twitter-color) !important;
+    border: none !important;
+    color: white !important;
+    font-weight: 900 !important;
+    text-transform: inherit !important;
+    border-radius: 30px !important;
+    height: 50px !important;
+    margin-top: 20px !important;
 }
