--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -1,6 +1,16 @@
+.sidebar {
+    border-right: 1px solid var(--twitter-background);
+    flex: 0.3;
+    /* min-width: 230px; */
+    margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .sidebarOption-icon {
     color: var(--twitter-color);
     font-size: 30px !important;
     margin-left: 20px;
     padding-right: 20px;
+   
 }
