--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,10 @@ body {
     --twitter-background: #e6ecf0;
 }
 
+body::-webkit-scrollbar{
+    display: none;
+}
+
 .app {
     display: flex;
     height: 100vh;
