--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -1,4 +1,9 @@
 .widgets {
     flex: 0.3;
     border-right: 1px solid var(--twitter-background);
+    overflow-y: scroll;
+}
+
+.widgets::-webkit-scrollbar {
+    display: none;
 }
