--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -7,3 +7,46 @@
 .widgets::-webkit-scrollbar {
     display: none;
 }
+
+.widget-input {
+    display: flex;
+    align-items: center;
+    background-color: var(--twitter-background);
+    padding: 10px;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 10px;
+}
+
+.widget-input > input {
+    border: none;
+    background: none;
+    outline-width: 0;
+}
+
+.widget-input-search {
+    color: gray;
+}
+
+.widget-container {
+    margin-top: 25px;
+    margin-left: 10px;
+    padding: 20px;
+    background-color: var(--twitter-background);
+    border-radius: 20px;
+    margin-right: 10px;
+    object-fit: contain;
+    overflow: auto;
+    
+}
+
+.widget-container > h2 {
+    font-size: 18px;
+    font-weight: 800;
+    margin-bottom: 10px;
+}
+
+
+
+
