--- a/src/feed/tweetBox.css
+++ b/src/feed/tweetBox.css
@@ -22,11 +22,22 @@
     outline-width: 0;
 }
 
+
+
 form > input {
     border : none;
     outline-width: 0;
     margin-left: 20px;
     font-size: 20px;
+}
+
+.image-upload > input {
+    display: none;
+}
+
+.image-upload > label {
+    width: 80px;
+    cursor: pointer;
 }
 
 .tweetBox-tweet {
