Created an algorithm that changes the color to red if the number of likes exceeds 0

--- a/src/feed/post.css
+++ b/src/feed/post.css
@@ -28,13 +28,18 @@
     margin-top: 20px;
 }
 
-.post-footer > .MuiSvgIcon-root  {
+#icon  {
     cursor: pointer;
 }
 
 .post-footer-div {
     display: flex;
     align-items: center;
+}
+
+.greaterThanZero {
+    color: red !important;
+   
 }
 
 .verified {
