Made the retweet icon to turn green when likes are greater than 1

--- a/src/feed/post.css
+++ b/src/feed/post.css
@@ -37,9 +37,13 @@
     align-items: center;
 }
 
-.greaterThanZero {
+.likesGreaterThanZero {
     color: red !important;
    
+}
+
+.retweetgreaterThanZero {
+    color : green;
 }
 
 .verified {
