Added the hover effect on the retweet and like button

--- a/src/feed/post.css
+++ b/src/feed/post.css
@@ -31,11 +31,20 @@
 #icon  {
     cursor: pointer;
     font-weight: 800;
+    margin-right: 5px;
 }
 
 .post-footer-div {
     display: flex;
     align-items: center;
+}
+
+.like:hover {
+    color: red;
+}
+
+.retweet:hover {
+    color : green;
 }
 
 .likesGreaterThanZero {
