--- a/src/feed/feed.css
+++ b/src/feed/feed.css
@@ -17,4 +17,5 @@
     border: 1px solid var(--twitter-background);
     border-bottom: none;
     padding: 15px 20px;
+    backdrop-filter: blur(10px);
 }
